--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "lint": "eslint src --ext .ts"
+    "lint": "eslint src --ext .ts",
+    "seed": "tsx scripts/seed.ts",
+    "seed:clear": "tsx scripts/clear.ts"
   },
   "keywords": [
     "furniture",
