--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   "author": "Ashraf Furnitures",
   "license": "MIT",
   "dependencies": {
+    "@types/passport-google-oauth20": "^2.0.17",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.0",
+    "google-auth-library": "^10.5.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.4",
