--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/passport-google-oauth20": "^2.0.17",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
